License, cargo metadata, etc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "ttid"
 version = "0.1.0-alpha.1"
 edition = "2024"
+authors = ["Christoph Herzog <chris@theduke.at>"]
+description = "Typed, time-aware IDs built on UUIDv8."
+repository = "https://github.com/theduke/ttid"
+documentation = "https://docs.rs/ttid"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 short-uuid = "0.2.1"
